Add GIF of career assistant

--- a/index.html
+++ b/index.html
@@ -425,17 +425,21 @@
                             <h4>Career Planning Assistant Based on Big Data Sample</h4>
                             <hr class="star-primary">
                             <img class="img-fluid img-centered img-rounded"
-                                 src="images/portfolio/career_assistant/career_assistant1.png" alt="">
+                                 src="images/portfolio/career_assistant/G1.gif" alt="">
                             <img class="img-fluid img-centered img-rounded"
-                                 src="images/portfolio/career_assistant/career_assistant2.png" alt="">
+                                 src="images/portfolio/career_assistant/G2.gif" alt="">
                             <img class="img-fluid img-centered img-rounded"
-                                 src="images/portfolio/career_assistant/career_assistant3.png" alt="">
+                                 src="images/portfolio/career_assistant/G3.gif" alt="">
                             <img class="img-fluid img-centered img-rounded"
-                                 src="images/portfolio/career_assistant/career_assistant4.png" alt="">
+                                 src="images/portfolio/career_assistant/G4.gif" alt="">
                             <img class="img-fluid img-centered img-rounded"
-                                 src="images/portfolio/career_assistant/career_assistant5.png" alt="">
+                                 src="images/portfolio/career_assistant/G5.gif" alt="">
                             <img class="img-fluid img-centered img-rounded"
-                                 src="images/portfolio/career_assistant/career_assistant6.png" alt="">
+                                 src="images/portfolio/career_assistant/G6.gif" alt="">
+                            <img class="img-fluid img-centered img-rounded"
+                                 src="images/portfolio/career_assistant/G7.gif" alt="">
+                            <img class="img-fluid img-centered img-rounded"
+                                 src="images/portfolio/career_assistant/G8.gif" alt="">
                             <p>This system can Recommend suitable career planning to users.It recommend what skills
                                 users should learn,
                                 According to user's background, we give them a total score and predict the salary for
