--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Xintong／Cathy Liu 's Home Page</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="description" content="Personal Portfolio HTML Template">
-    <meta name="keywords" content="Personal, Portfolio, HTML Template, Freelancer">
-    <meta name="author" content="peng lam">
+    <meta name="description" content="Xintong Liu Personal Portfolio">
+    <meta name="keywords" content="Xintong Liu">
+    <meta name="author" content="Xintong Liu">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Favicon -->
@@ -62,7 +62,6 @@
                 <li><a href="#home" class="smoothScroll">Home</a></li>
                 <li><a href="#about" class="smoothScroll">About</a></li>
                 <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
-                <li><a href="#contact" class="smoothScroll">Contact</a></li>
             </ul>
         </div>
 
@@ -165,22 +164,6 @@
 </section>
 
 
-<!-- Divider Section -->
-<section id="divider" class="parallax-section">
-    <div class="container">
-        <div class="row">
-
-            <div class="col-md-12 col-sm-12 text-center">
-                <h5 class="font-playfair">I am available for freelance projects.</h5>
-                <h2>Let's <span class="font-playfair">work</span> together indeed!</h2>
-                <a href="#contact" class="smoothScroll btn btn-default section-btn">Get quotes</a>
-            </div>
-
-        </div>
-    </div>
-</section>
-
-
 <!-- Work Section -->
 <section id="portfolio" class="parallax-section">
     <div class="container">
@@ -264,58 +247,6 @@
         </div>
     </div>
 </section>
-
-
-<!-- Contact Section -->
-<section id="contact" class="parallax-section">
-    <div class="container">
-        <div class="row">
-
-            <div class="col-md-12 col-sm-12">
-                <!-- SECTION TITLE -->
-                <div class="section-title">
-                    <h2>Contact</h2>
-                    <p>let's work together projects and just send me email here</p>
-                </div>
-            </div>
-
-            <div class="col-md-offset-1 col-md-10 col-sm-12">
-                <!-- CONTACT FORM HERE -->
-                <form id="contact-form" role="form">
-
-                    <!-- IF MAIL SENT SUCCESSFULLY -->
-                    <h6 class="text-success">Your message has been sent successfully. </h6>
-
-                    <!-- IF MAIL SENDING UNSUCCESSFULL -->
-                    <h6 class="text-danger">E-mail must be valid and message must be longer than 1 character.</h6>
-
-                    <div class="col-md-4 col-sm-4">
-                        <input type="text" class="form-control" id="cf-name" name="cf-name" placeholder="Name">
-                    </div>
-
-                    <div class="col-md-4 col-sm-4">
-                        <input type="email" class="form-control" id="cf-email" name="email" placeholder="Email">
-                    </div>
-
-                    <div class="col-md-4 col-sm-4">
-                        <input type="text" class="form-control" id="cf-subject" name="subject" placeholder="Subject">
-                    </div>
-
-                    <div class="col-md-12 col-sm-12">
-                        <textarea class="form-control" rows="7" id="cf-message" name="cf-message"
-                                  placeholder="Message"></textarea>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6">
-                        <button type="submit" class="form-control" id="cf-submit" name="submit">Send Message</button>
-                    </div>
-                </form>
-            </div>
-
-        </div>
-    </div>
-</section>
-
 
 <!-- Footer Section -->
 <footer>
