--- a/index.html
+++ b/index.html
@@ -355,6 +355,24 @@
                             <h2>FunJob</h2>
                             <h4>Career Planning Assistant Based on Big Data Sample</h4>
                             <hr class="star-primary">
+                            <p class = "project-intro">FunJob can recommend suitable career planning to users based on big data processing and information mining.
+                            </p>
+                            <p class = "project-intro">
+                                According to user's background, it gives them a total <b><span class="highlight-words">score</span></b> and predict the <b><span class="highlight-words">salary</span></b> for
+                                them in the next few years. It recommends what <b><span class="highlight-words">skills</span></b>
+                                users should learn. Meanwhile it recommends some <b><span class="highlight-words">excellent people </span></b> who have similar background with them.
+                            </p>
+                            <p class = "project-intro">
+                                <b><span class="highlight-words"> My contribution includes:</span></b><br/>
+
+                                •  Conducted data processing after collecting about <b><span class="highlight-words">260,000</span></b> pieces of resume information;<br/>
+                                •  Built a distributed Hadoop platform with Hive and Mahout;<br/>
+                                •  Initiated a classification algorithm based on <b><span class="highlight-words">Logistic Regression</span></b> to divide samples as excellent and mediocre,
+                                achieved optimal classification accuracy to <b><span class="highlight-words">82%</span></b><br/>
+
+                            </p>
+                            <br/>
+                            <h3><b>Image Gallery</b></h3>
                             <img class="img-fluid img-centered img-rounded"
                                  src="images/portfolio/career_assistant/G1.gif" alt="">
                             <img class="img-fluid img-centered img-rounded"
@@ -371,11 +389,7 @@
                                  src="images/portfolio/career_assistant/G7.gif" alt="">
                             <img class="img-fluid img-centered img-rounded"
                                  src="images/portfolio/career_assistant/G8.gif" alt="">
-                            <p>This system can Recommend suitable career planning to users.It recommend what skills
-                                users should learn,
-                                According to user's background, we give them a total score and predict the salary for
-                                them in the next few years.
-                                Meanwhile we recommend some excellent people who have similar background with them.
+
                             <ul class="list-inline item-details">
                                 <li>
                                     <strong>
