--- a/index.html
+++ b/index.html
@@ -568,6 +568,11 @@
                             <h2>BookAholic </h2>
                             <h4>B2C Online Bookstore</h4>
                             <hr class="star-primary">
+                            <p class = "project-intro"> BookAholic is an online bookstore based on <b><span class="highlight-words">SSH (Struts/Spring/Hibernate)</span></b> framework which contains
+                                functions including logging in, purchasing books online, managing the information of users and so on.
+                            </p>
+                            <br/>
+                            <h3><b>Image Gallery</b></h3>
                             <img class="img-fluid img-centered img-rounded"
                                  src="images/portfolio/bookstore/bookstore1.png" alt="">
                             <img class="img-fluid img-centered img-rounded"
@@ -582,9 +587,7 @@
                                  src="images/portfolio/bookstore/bookstore7.png" alt="">
                             <img class="img-fluid img-centered img-rounded"
                                  src="images/portfolio/bookstore/bookstore8.png" alt="">
-                            <p>An online bookstore based on SSH (Struts/Spring/Hibernate) framework which contains
-                                functions including logging in,
-                                purchasing books online, managing the information of users and so on.
+
                             <ul class="list-inline item-details">
                                 <li>
                                     <strong>
