Online Customer Service System

--- a/index.html
+++ b/index.html
@@ -670,6 +670,11 @@
                             <h2>Online Customer Service System</h2>
                             <h4> Online Customer Service System for Chinese Southern Airlines </h4>
                             <hr class="star-primary">
+                            <p class="project-intro">This project is to develop an Online Customer Service System for <b><span class="highlight-words">Chinese Southern
+                                Airlines</span></b> by applying <b><span class="highlight-words">Websocket</span></b> to the communication between server side and client side.
+                            </p>
+                            <br/>
+                            <h3><b>Image Gallery</b></h3>
                             <img class="img-fluid img-centered img-rounded"
                                  src="images/portfolio/customer_service/Customer_service1.png" alt="">
                             <img class="img-fluid img-centered img-rounded"
@@ -688,9 +693,7 @@
                                  src="images/portfolio/customer_service/Customer_service8.png" alt="">
                             <img class="img-fluid img-centered img-rounded"
                                  src="images/portfolio/customer_service/Customer_service9.png" alt="">
-                            <p>This project is to develop an Online Customer Service System for Chinese Southern
-                                Airlines by
-                                applying Websocket to the communication between server side and client side.
+
                             <ul class="list-inline item-details">
                                 <li>
                                     <strong>
